:construction_worker: Fix planetscale database

--- a/cicd/release/Dockerfile
+++ b/cicd/release/Dockerfile
@@ -1,13 +1,8 @@
-FROM node:18-alpine as builder
+FROM node:18-alpine
 WORKDIR /app
 COPY yarn.lock .env ./
 COPY package.deps.json package.json
 RUN yarn install
 COPY . .
-RUN yarn prisma migrate deploy
-RUN yarn build
-
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=builder /app .
+RUN yarn prisma migrate deploy & yarn prisma generate & yarn build
 ENTRYPOINT ["yarn", "start:prod"]
